syntax = "proto2";
option swift_prefix="PB";

message Request {
  optional string id = 1;
  optional string user_id = 2;
  repeated ClientFeature client_features = 3; // maybe map<string, string> is better
  optional string sdk_version = 4; // used to filter by
  optional string platform = 5; // used to filter by
  optional string version = 6; // used to filter by
  optional string version_code = 7; // used to filter by
  optional string language = 8; // used to filter by
  optional string device_id = 9; // used to split by
  map<string, double> diagnostics = 10; // provide some diagnostics measurement
  optional string os_version = 11; // used to filter by
  optional string os_human_version = 12; // used to filter by
  optional string sdk_adapter_name = 13;
  optional string sdk_id_adapter_name = 14;
}

message ClientFeature {
  optional string name = 1;
  optional string value = 2;
}
