syntax = "proto2";
option swift_prefix="PB";

message Value {
    optional string value = 1;
    optional int64 testId = 2;
    optional bool isNull = 3; // VARIOQUB-256
    optional string type = 4;
    optional ConditionList condition = 5;
}

message Flag {
    optional string name = 1;
    repeated Value values = 2;
}

message Response {
    optional string id = 1;
    optional string experiments = 2;
    repeated Flag flags = 3;
    optional string config_version = 4; // VARIOQUB-589: add config version to track changes
    repeated Resource resources = 5;
}

message Resource {
    optional string key = 1;
    optional string type = 2;
    optional string value = 3;
}


message ClientSideCondition {
    optional string name = 1;
    optional string type = 2;
    optional string value = 3;
}

message ConditionAnd {
    optional ClientSideCondition client_side_condition = 1;
}

message ConditionOr {
    repeated ConditionAnd ands = 1;
}

message ConditionValue {
    repeated ConditionOr ors = 1;
}

message Condition {
    optional string name = 1;
    optional ConditionValue value = 2;
}

message ConditionList {
    repeated Condition values = 1;
}
